# NFA

./: .gitignore  CMakeLists.txt  automata.txt  fsm.gv  main.c  nfa.c  nfa.h
automata/lsd/: 2|x.txt  3|x.txt  4|x.txt  cnt0_is_even.txt  cnt1_is_even.txt  sum.txt  zeros.txt
automatons/: cnt0_is_even.txt  cnt1_is_even.txt
automatons/lsd/: 2|x.txt  3|x.txt  8|x.txt  cnt0_is_even.txt  cnt1_is_even.txt  sum.txt  x_eq_y.txt
automatons/msd/: 5|x.txt
big_int/: big_int.c  big_int.h
other/: CLI.c  CLI.h  Stack.c  Stack.h  Stack2.c  Stack2.h  a_dict.c  a_dict.h  big_int.c  big_int.h  good_stuff.c  good_stuff.h  linked_list.c  linked_list.h  logic.c  logic.h  op_stack.c  op_stack.h  reg.c  reg.h
